OBS page continued.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -1783,6 +1783,9 @@
         }
       }
     },
+    "%@ dB" : {
+
+    },
     "%@ EV" : {
       "localizations" : {
         "de" : {
@@ -27998,7 +28001,6 @@
       }
     },
     "Muted" : {
-      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -37650,6 +37652,9 @@
           }
         }
       }
+    },
+    "Source %@ not found" : {
+
     },
     "Source name" : {
 
