Set maxbw to follow input by default in SRT protocol.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -29096,6 +29096,9 @@
         }
       }
     },
+    "Max bandwidth follows input" : {
+
+    },
     "Maximum age" : {
       "localizations" : {
         "de" : {
