--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -5118,7 +5118,11 @@
         }
       }
     },
+    "A connection with high priority will be used more than a connection with low priority if the high priority connection is stable. Unstable connections will get lowest priority regardless of configured priority until they are stable again." : {
+
+    },
     "A connection with high priority will be used more than a connection with low priority if the high priority connection is stable. Unstable connections will get lowset priority regardless of configured priority until they are stable again." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
