Remote control continued.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -37635,6 +37635,9 @@
         }
       }
     },
+    "Remote control" : {
+
+    },
     "Reset" : {
       "localizations" : {
         "de" : {
